# brainvisa_recipes

./: .gitignore  LICENSE  README.md  pyproject.toml
local_averages/: README.md  README.rst  local_averages.py  rs_example.csv
notebooks/click_and_see_UMAP/: click_and_see_UMAP.ipynb
notebooks/list_mesh_sulci_bucket_visu/: UKB_crops.ipynb  list_mesh_sulci_bucket_visu.ipynb
notebooks/skel_QC.py/: compar_skel_QC.ipynb  skel_QC.py
notebooks/visualize_parameter_whole_brain/: README.md  region_to_sulci_with_smaller_region_size.json  visualize_parameter_whole_brain.ipynb  visualize_parameter_whole_brain_region_size.ipynb  visualize_parameter_whole_brain_sulcus_by_sulcus.ipynb  visualize_parameter_whole_brain_sulcus_by_sulcus.py
sulcal_roi_view/: sulcal_roi_view.py
twin_game/: README.md  README.txt  sort_hcp.py  twin_config.json  twin_config_hcp_driviere.json  twin_config_local.json  twingame.py
view_gene_database/: define_sulci_map.ipynb  define_sulci_map_using_number_of_sulci.ipynb  define_sulci_map_using_region_size.ipynb  filtered_region_to_sulci.json  region_to_sulci_with_smaller_number_of_sulci.json  viewer.py
view_sulcal_in_white_mesh/: viewer.py  viewer_one_parameter.py
view_sulcal_region/: README.md  view_sulcal_region_in_skeleton.py
visu_indiv_sulcus/: visu_indiv_sulci.py
